#1822 Research: Manage open triggered events in mongodb-datastore
