# mongodb-datastore/swagger.yaml
@@ -5,7 +5,7 @@ info:
   version: 0.1.0
 schemes:
   - http
-basePath: "/"
+basePath: /
 consumes:
   - application/cloudevents+json
   - application/json
@@ -107,6 +107,44 @@ paths:
           description: error
           schema:
             "$ref": "#/definitions/error"
+  /event/open:
+    get:
+      tags:
+        - event
+      operationId: getOpenEvents
+      summary: Gets all open triggered events
+      parameters:
+        - name: type
+          in: query
+          type: string
+          required: true
+          description: Type of the keptn cloud event
+        - "$ref": "#/parameters/pagesizeParam"
+        - "$ref": "#/parameters/pageParam"
+      responses:
+        200:
+          description: ok
+          schema:
+            type: object
+            properties:
+              nextPageKey:
+                type: string
+                description: Pointer to the next page
+              totalCount:
+                type: integer
+                description: Total number of events
+              pageSize:
+                type: integer
+                description: Size of the returned page
+              events:
+                type: array
+                items:
+                  "$ref": "#/definitions/KeptnContextExtendedCE"
+        default:
+          description: error
+          schema:
+            "$ref": "#/definitions/error"
+
 parameters:
   pagesizeParam:
     name: pageSize
